# glproxy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md  appveyor.yml  build.bat
cmake/: epoxy_run_test_wrapper.cmake
include/epoxy/: _common.h  common.h  egl.h  gl.h  glx.h  wgl.h
include/glproxy/: _common.h  config.h.in  egl.h  egl_generated.h  eglplatform.h  gl.h  gl_generated.h  glx.h  glx_generated.h  khrplatform.h  wgl.h  wgl_generated.h
registry/: egl.xml  gl.xml
src/: CMakeLists.txt  dispatch_common.c  dispatch_common.h  dispatch_generated.c  dispatch_generated.inc  egl_generated_dispatch_table_type.inc  egl_generated_dispatch_thunks.inc  gen_dispatch.py  gl_generated_dispatch_table_type.inc  gl_generated_dispatch_thunks.inc  glx_generated_dispatch_table_type.inc  glx_generated_dispatch_thunks.inc  wgl_generated_dispatch_table_type.inc  wgl_generated_dispatch_thunks.inc
test/: CMakeLists.txt  egl_and_glx_different_pointers.c  egl_common.c  egl_common.h  egl_gl.c  egl_has_extension_nocontext.c  egl_without_glx.c  glx_alias_prefer_same_name.c  glx_common.c  glx_gles2.c  glx_public_api_core.c  headerguards.c  miscdefines.c  wgl_common.c  wgl_common.h  wgl_core_and_exts.c  wgl_per_context_funcptrs.c  wgl_usefontbitmaps.c
